Room database fixes

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    //gson
+    compile 'com.google.code.gson:gson:2.8.2'
+
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
@@ -52,6 +55,14 @@ dependencies {
     //debug
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
+    // Room
+    compile 'com.commonsware.cwac:saferoom:0.0.4'
+    compile 'android.arch.persistence.room:rxjava2:1.0.0'
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+
     //Domain
     compile project(':domain')
 }
