--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '27.0.1'
     defaultConfig {
-        applicationId "com.twentytwoseven.debug"
+        applicationId "com.example"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -34,8 +34,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // Dagger
-    compile "com.google.dagger:dagger:2.11"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.11"
+    compile "com.google.dagger:dagger:2.12"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.12"
     compile 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
 
@@ -45,7 +45,7 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
 
     //Glide
-    compile 'com.github.bumptech.glide:glide:4.1.1'
+    compile 'com.github.bumptech.glide:glide:4.3.1'
 
     //Moshi
     compile 'com.squareup.moshi:moshi:1.5.0'
