--- a/data/build.gradle
+++ b/data/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     //OkHttp
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
